syntax = "proto3";

package appService;
option go_package = "../proto";


message Data {
    string name = 1;
    Header header = 2;
    bytes payload = 3;
}

message Header {
    string tag = 1;
    string from = 2;
    map<string, string> option = 3;
}

message SendResponse {
    bool success = 1;
    string message = 2;
    bytes payload = 3;
}

service DriverToAppService {
    rpc SendToAppService(Data) returns (SendResponse) {}
}

service AppToDriverService {
    rpc SendToDriver(Data) returns (SendResponse) {}
}